--- a/frontend/src/css/Common.css
+++ b/frontend/src/css/Common.css
@@ -91,8 +91,13 @@ h1 {
 
 .card h2,
 .card h3 {
-    margin: 0px 5px;
-    padding-bottom: 15px;
+    margin: 0;
+    padding: 5px 20px 5px 5px;
+    white-space: pre-wrap;
+}
+
+.card h3 {
+    font-weight: 400;
 }
 
 .overlay input,
@@ -160,6 +165,7 @@ h1 {
 hr {
     border-color: gray;
     opacity: 0.2;
+    margin: 12px 5px;
 }
 
 .card p {
@@ -219,6 +225,10 @@ hr {
 
 .dark-mode a:hover {
     color: #03dac6;
+}
+
+.dark-mode hr {
+    border-color: lightgray;
 }
 
 .dark-mode .card,
